[package]
name = "lutetium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }

async-trait = "^0.1"

thiserror = "^1"

tracing = "^0.1"

[dev-dependencies]
anyhow = "^1"
uuid = { version = "^1", features = ["serde", "v7"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }