[workspace]
members = [
    "."
]

[package]
name = "lutetium"
description = "tokio based simple actor library"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/lutetium"
version = "0.5.2"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
persistence = ["serde", "dashmap"]

[dependencies]
tokio = { version = "^1", features = ["full"] }
async-trait = "^0.1"
thiserror = "^1"
tracing = "^0.1"

serde = { version = "^1", features = ["derive", "rc"],  optional = true }
dashmap = { version = "6", optional = true }

[dev-dependencies]
anyhow = "^1"
uuid = { version = "^1", features = ["serde", "v7"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

flexbuffers = { version = "^2" }